# lush

./: .dockerignore  .env.template  .gitignore  CHANGELOG.md  README.md  docker-compose.yml  package.json  release-please-config.json
.github/: CODEOWNERS
apps/lush/src-tauri/: .gitignore  Cargo.toml  README.md  tauri.conf.json
apps/lush/src-tauri/capabilities/: default.json
apps/lush/src-tauri/icons/: icon.icns
apps/lush/src-tauri/src/: lib.rs  main.rs
docs/: architecture.md  auth-state.md  deployment.md  releases.md  session-orchestration.md  session-state.md  tools-plan.md
scripts/: build-code-sidecar.ts  code-canary.ts  dev.ts  validate-release.ts  web-distribution.ts
tests/: agent-chat-session-context.test.ts  agent-session-context.test.ts  agent-stream-protocol.test.ts  api-client-ip.test.ts  api-rate-limit.test.ts  api-request-log.test.ts  api-spec.test.ts  api-transport-security.test.ts  app-account-recovery.test.ts  app-agent-chat-request.test.ts  app-agent-message.test.ts  app-agent-session-state.test.ts  app-api-session.test.ts  app-chat-model-selection.test.ts  app-chat-session-state.test.ts  app-chat-stream.test.ts  app-client-event-stream.test.ts  app-markdown-math.test.ts  app-prompt-input-form.test.ts  app-routing.test.ts  app-session-organization.test.ts  app-sidebar-preference.test.ts  authz-acl.test.ts  authz-action-tokens.integration.test.ts  authz-jwt-keys.test.ts  authz-organization-invites.integration.test.ts  authz-organization-session.integration.test.ts  authz-password.test.ts  authz-refresh-session.integration.test.ts  (+28 more)
(+232 files in other folders)
