[package]
name = "lush-app"
version = "0.0.0"
description = "Lush desktop and mobile shell"
authors = ["Lush Contributors"]
edition = "2021"
rust-version = "1.88"

[lib]
name = "lush_app"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
