[package]
name = "lush-app"
version = "0.0.0"
description = "Lush desktop and mobile shell"
authors = ["Lush Contributors"]
edition = "2021"
rust-version = "1.88"

[lib]
name = "lush_app"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
uuid = { version = "1", features = ["v4"] }
